# C-EngineFun

./: .clang-format  .gitignore  CMakeLists.txt  DOCUMENTATION_SUMMARY.md  Doxyfile  GITHUB_SETUP.md  QUICK_START.md  README.md  TUTORIAL.md  generate_docs.sh  run_game.sh  simple_config_test  simple_config_test.cpp  test_animation_system.cpp  test_config.cpp  test_options_menu.md
.github/: CONTRIBUTING.md  FUNDING.yml  RELEASE_TEMPLATE.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
assets/: README.md
assets/config/: characters.ini  credits.txt  customization.ini  gameplay.ini  highscores.ini  items.ini  job_abilities.ini  keybindings.ini
docs/: ConfigSystemImplementation.md  KEYBINDING_SYSTEM.md  NAVIGATION_GUIDE.md  OPTIONS_SYSTEM.md
docs/html/: BitmapFont_8cpp.html  BitmapFont_8cpp_source.html  BitmapFont_8h.html  BitmapFont_8h_source.html  CollisionSystem_8cpp.html  CollisionSystem_8cpp_source.html  CollisionSystem_8h.html  CollisionSystem_8h_source.html  Component_8h.html  Component_8h_source.html  ECS_8h.html  ECS_8h_source.html  Engine_8cpp.html  Engine_8cpp_source.html  Engine_8h.html  Engine_8h_source.html  EntityManager_8cpp.html  EntityManager_8cpp_source.html  (+180 more)
examples/: AudioExample.cpp  ConfigIntegrationExample.cpp  ECSExample.cpp  EnhancedGameExample.cpp
src/: main.cpp
test/: run_tests.sh  test_audio_system.cpp  test_basic_rendering.cpp  test_compilation.cpp  test_components_only  test_components_only.cpp  test_config  test_config_system.cpp  test_enhanced_build.cpp  test_enhanced_systems.cpp  test_input_system.cpp  test_menu_rendering.cpp  test_options_compilation.cpp  test_state_management.cpp
(+186 files in other folders)
